--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
 			<version>4.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.0.pr3</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
@@ -54,6 +59,13 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
 			<version>1.7.25</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>22.0</version>
 			<scope>test</scope>
 		</dependency>
 
