--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@
 						<goals>
 							<goal>jar</goal>
 						</goals>
-						<phase>deploy</phase>
+						<phase>install</phase>
 					</execution>
 				</executions>
 				<configuration>
@@ -120,7 +120,7 @@
 						<goals>
 							<goal>jar</goal>
 						</goals>
-						<phase>deploy</phase>
+						<phase>install</phase>
 					</execution>
 				</executions>
 			</plugin>
@@ -132,5 +132,9 @@
 			<id>SmartCommunityLab-releases</id>
 			<url>http://repository.smartcommunitylab.it/content/repositories/releases</url>
 		</repository>
+		<snapshotRepository>
+			<id>SmartCommunityLab-snapshots</id>
+			<url>http://repository.smartcommunitylab.it/content/repositories/snapshots</url>
+		</snapshotRepository>
 	</distributionManagement>
 </project>
